smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/strings/byte-text-block-empty.smithy
// Syntax error at line 4, column 16: Error parsing byte text block: Text block is empty | Model
namespace smithy.example

@documentation(b"""""")
string MyString
